--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.12",
+    "@tanstack/react-table": "^8.21.3",
     "acme-client": "^5.4.0",
     "cheerio": "^1.1.2",
     "chokidar": "^4.0.3",
