--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.12",
+    "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-table": "^8.21.3",
     "acme-client": "^5.4.0",
     "cheerio": "^1.1.2",
