Workspaces & modules management code is now common

--- a/package.json
+++ b/package.json
@@ -111,6 +111,11 @@
       "bun": "./src/@linker/index.ts",
       "default": "./dist/@linker/index.js"
     },
+    "./modules": {
+      "bun": "./src/@modules/index.ts",
+      "default": "./dist/@modules/index.js"
+    },
+
     "./tool-jopinb": {
       "bun": "./src/@tool-jopinb/index.ts",
       "default": "./dist/@tool-jopinb/index.js"
